--- a/ods4/index.html
+++ b/ods4/index.html
@@ -159,13 +159,13 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <h2 id="6-otros-ods-relacionados">6. Otros ODS relacionados</h2>
 <ul>
 <li>
-<p><a href="https://jcanleo649.github.io/SASP_04/#ods3">ODS 3 - Salud y Bienestar (Realizado por Jhonatan)</a>: El ODS 4 se relaciona con el 3 ya que una educación de calidad permite que las personas puedan salvar vidas por ejemplo con técnicas de primeros auxilios o la prevención de ETS mediante la educación sexual.</p>
+<p><a href="https://jcanleo649.github.io/SASP_04/ods3">ODS 3 - Salud y Bienestar (Realizado por Jhonatan)</a>: El ODS 4 se relaciona con el 3 ya que una educación de calidad permite que las personas puedan salvar vidas por ejemplo con técnicas de primeros auxilios o la prevención de ETS mediante la educación sexual.</p>
 </li>
 <li>
-<p><a href="https://amancab828.github.io/SASP_04/#ods8">ODS 8 - Trabajo Decente y Crecimiento Económico (Realizado por Antonio)</a>: El ODS 4 se relaciona con el 8 ya que una educación de calidad permtite que las personas puedan acceder al mundo laboral teniendo concocimientos avanzados y que permitan realizar su trabajo de manera adecuada así como mejorar las oportunidades en el mercado laboral.</p>
+<p><a href="https://amancab828.github.io/SASP_04/ods8">ODS 8 - Trabajo Decente y Crecimiento Económico (Realizado por Antonio)</a>: El ODS 4 se relaciona con el 8 ya que una educación de calidad permtite que las personas puedan acceder al mundo laboral teniendo concocimientos avanzados y que permitan realizar su trabajo de manera adecuada así como mejorar las oportunidades en el mercado laboral.</p>
 </li>
 <li>
-<p><a href="https://jgonbur142.github.io/P4---AmpliacionContenido/#ods11">ODS 11 - Ciudades y Comunidades Sostenibles (Realizado por Jorge)</a>: El ODS 4 se relaciona con el 11 ya que una educación de calidad permite que las personas encargadas de la gestión de las ciudades mejore al disponer estas personas de un conocimiento superior.</p>
+<p><a href="https://jgonbur142.github.io/P4---AmpliacionContenido/ods11">ODS 11 - Ciudades y Comunidades Sostenibles (Realizado por Jorge)</a>: El ODS 4 se relaciona con el 11 ya que una educación de calidad permite que las personas encargadas de la gestión de las ciudades mejore al disponer estas personas de un conocimiento superior.</p>
 </li>
 </ul>
 
